# nexel24

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  baseplate_bytecode_schema.yaml  nexel24_spec.json
.devcontainer/: devcontainer.json
.github/: PROJECT_LAYOUT.txt  copilot-instructions.md
docs/: BIOS_API.md  CALLING_CONVENTION.md  VDP_IMPLEMENTATION.md  VDP_QUICK_REFERENCE.md  VLU_REFERENCE.md
examples/: bg0_affine_demo.rs  vdp_demo.rs
src/: apu.rs  bios.rs  bytecode.rs  cpu.rs  emulator.rs  lib.rs  main.rs  nraw.rs  vdp.rs  vlu.rs  vm.rs
src/core/: bus.rs  mod.rs
